Changelog
==========

version 0.78
------------
* More robust notification
* More robust 'resume playback logic'
* Updated dependencies
* Leaner cache

version 0.76
------------
* Fixed crash

version 0.74
------------
* Added crash e-mail crash reporter for the free flavor
* Updated Playlist UI
* Tweaked subscription UI
* Tweaked UI colors
* Started on a new and better notification

version 0.72
------------
* Fixed crash when opening the settings 
* Experimenting with a new playlist UI
* Fixed crash on startup on 4.1.2

version 0.70
------------
* Dependency cleanup
* Added "Refresh" menu item to the Feed view

Version 0.68
-------------
* Added a Changelog :)
* Better looking navigation drawer
* Some UI tweeks
* Fixed the position of the empty subscription screen

Version 0.66
-------------
* Fixed Crash